test/errors/cpp_generator_error/zs/bitmask_values_class_clash_error.zs
package bitmask_values_class_clash_error;

// Values clashes with an inner class Values which keeps the constants in generated code
bitmask uint8 Values
{
    FIRST,
    SECOND
};
